--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
       }
       .wrap2>.bg-text{
         position: absolute;
-        width: 1500px;
+        width: 1520px;
         height: 750px;
         top: 40%;
         left: 50%;
@@ -332,16 +332,26 @@
       }
       .wrap3{
         position: relative;
-        height: 750px; 
+        height: 500px; 
       }
       .wrap3>.bg-text{
         position: absolute;
-        width: 1500px;
-        height: 750px;
-        top: 20%;
+        width: 100%;
+        height: 500px;
         left: 50%;
-        transform: translate(-50%, -50%);
+        top: 45%;
+        transform: translate(-40%, -50%);
       }
+      .slider4{
+        height: 400px;
+      }
+      .silder4 > .carousel-item{
+        height: 300px;
+      }
+      .silder4 > .carousel-item.active  {
+        height: 300px;
+      }
+      
       @media (max-width: 1000px) {
         #tabs .nav-tabs .nav-link.active {
         border: 0px;
@@ -1201,7 +1211,7 @@
       </div>
       </main>
     </div>
-    <div class="wrap2 mw-100 mb-5">
+    <div class="wrap2 mw-100 mb-5 ">
       <div class="fixed-bg-image darkened-image2 mw-100" style="background-image: url('img/chefs-bg.jpg');"></div>
       <div class="row mw-100 bg-text d-flex justify-content-center p-lg-5 ps-5">
         <div class="col-lg-5">
@@ -1301,97 +1311,94 @@
         </div>
       </div>
     </div>
-    <br><br><br>
-    <div class="row mw-100 mt-5 pt-5">
-      <div class="wrap3  mb-5">
-        <div class="bg-text darkened-image mw-100" style="background-image: url('img/testimonials-bg.jpg');"></div>
-        <div class="row">
-          <div id="carouselExampleIndicators" class="carousel slide">
-            <ol class="carousel-indicators ">
-              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="dots active"></li>
-              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="dots"></li>
-              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="dots"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div class="row d-flex justify-content-center">
-                  <img src="img/testimonials/testimonials-1.jpg" alt="" class="rounded-circle" style="width: 130px; border: 4px darkgrey solid; border-radius: 50%;">
+    <div class="wrap3 mw-100 mb-5" style="height: 500px;">
+      <div class=" darkened-image mw-100" style="background-image: url('img/testimonials-bg.jpg'); height: 500px;"></div>
+      <div class="row mw-100 bg-text d-flex justify-content-center p-lg-5 ps-5">
+        <div id="carouselExampleIndicators" class="carousel slide slider4">
+          <ol class="carousel-indicators">
+            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="dots active"></li>
+            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="dots"></li>
+            <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="dots"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row d-flex justify-content-center">
+                <img src="img/testimonials/testimonials-1.jpg" alt="" class="rounded-circle" style="width: 130px; border: 4px darkgrey solid; border-radius: 50%;">
+              </div>
+              <div class="row text-center d-flex justify-content-center text-white lh-1 mt-4">
+                <p class="fw-bold" style="font-size: 22px;">
+                  Saul Goodman
+                </p>
+                <p class="lead"  style="font-size: 14px;">
+                  Master Chef
+                </p>
+                <div class="row mt-2">
+                  <div class="col">
+                    <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);"></i>
+                    <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
+                    <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
+                    <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
+                    <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
+                  </div>
                 </div>
-                <div class="row text-center d-flex justify-content-center text-white lh-1 mt-4">
-                  <p class="fw-bold" style="font-size: 22px;">
-                    Saul Goodman
-                  </p>
-                  <p class="lead"  style="font-size: 14px;">
-                    Master Chef
-                  </p>
-                  <div class="row mt-2">
-                    <div class="col">
-                      <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);"></i>
-                      <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
-                      <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
-                      <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
-                      <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
-                    </div>
-                  </div>
-                  <div class="row d-flex mt-4" style="font-size: 18px;">
-                    <i class="fa fa-quote-left col"  style="color: lightgrey;">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam tempore animi iusto aspernatur quis velit.
-                      <i class="fa fa-quote-right col"  style="color: lightgrey;"></i></i>
-                  </div>
+                <div class="row d-flex mt-4" style="font-size: 18px;">
+                  <i class="fa fa-quote-left col"  style="color: lightgrey;">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam tempore animi iusto aspernatur quis velit.
+                    <i class="fa fa-quote-right col"  style="color: lightgrey;"></i></i>
                 </div>
               </div>
-              <div class="carousel-item">
-                <div class="row d-flex justify-content-center">
-                  <img src="img/testimonials/testimonials-1.jpg" alt="" class="rounded-circle" style="width: 130px; border: 4px darkgrey solid; border-radius: 50%;">
+            </div>
+            <div class="carousel-item">
+              <div class="row d-flex justify-content-center">
+                <img src="img/testimonials/testimonials-1.jpg" alt="" class="rounded-circle" style="width: 130px; border: 4px darkgrey solid; border-radius: 50%;">
+              </div>
+              <div class="row text-center d-flex justify-content-center text-white lh-1 mt-4">
+                <p class="fw-bold" style="font-size: 22px;">
+                  Saul Goodman
+                </p>
+                <p class="lead"  style="font-size: 14px;">
+                  Master Chef
+                </p>
+                <div class="row mt-2">
+                  <div class="col">
+                    <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);"></i>
+                    <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
+                    <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
+                    <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
+                    <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
+                  </div>
                 </div>
-                <div class="row text-center d-flex justify-content-center text-white lh-1 mt-4">
-                  <p class="fw-bold" style="font-size: 22px;">
-                    Saul Goodman
-                  </p>
-                  <p class="lead"  style="font-size: 14px;">
-                    Master Chef
-                  </p>
-                  <div class="row mt-2">
-                    <div class="col">
-                      <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);"></i>
-                      <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
-                      <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
-                      <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
-                      <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
-                    </div>
-                  </div>
-                  <div class="row d-flex mt-4" style="font-size: 18px;">
-                    <i class="fa fa-quote-left col"  style="color: lightgrey;">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam tempore animi iusto aspernatur quis velit.
-                      <i class="fa fa-quote-right col"  style="color: lightgrey;"></i></i>
-                  </div>
+                <div class="row d-flex mt-4" style="font-size: 18px;">
+                  <i class="fa fa-quote-left col"  style="color: lightgrey;">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam tempore animi iusto aspernatur quis velit.
+                    <i class="fa fa-quote-right col"  style="color: lightgrey;"></i></i>
                 </div>
               </div>
-              <div class="carousel-item">
-                <div class="row d-flex justify-content-center">
-                  <img src="img/testimonials/testimonials-1.jpg" alt="" class="rounded-circle" style="width: 130px; border: 4px darkgrey solid; border-radius: 50%;">
+            </div>
+            <div class="carousel-item">
+              <div class="row d-flex justify-content-center">
+                <img src="img/testimonials/testimonials-1.jpg" alt="" class="rounded-circle" style="width: 130px; border: 4px darkgrey solid; border-radius: 50%;">
+              </div>
+              <div class="row text-center d-flex justify-content-center text-white lh-1 mt-4">
+                <p class="fw-bold" style="font-size: 22px;">
+                  Saul Goodman
+                </p>
+                <p class="lead"  style="font-size: 14px;">
+                  Master Chef
+                </p>
+                <div class="row mt-2">
+                  <div class="col">
+                    <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);"></i>
+                    <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
+                    <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
+                    <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
+                    <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
+                  </div>
                 </div>
-                <div class="row text-center d-flex justify-content-center text-white lh-1 mt-4">
-                  <p class="fw-bold" style="font-size: 22px;">
-                    Saul Goodman
-                  </p>
-                  <p class="lead"  style="font-size: 14px;">
-                    Master Chef
-                  </p>
-                  <div class="row mt-2">
-                    <div class="col">
-                      <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);"></i>
-                      <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
-                      <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
-                      <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
-                      <i class="col bi bi-star-fill" style="color: rgb(237, 177, 67);;"></i>
-                    </div>
-                  </div>
-                  <div class="row d-flex mt-4" style="font-size: 18px;">
-                    <i class="fa fa-quote-left col"  style="color: lightgrey;">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam tempore animi iusto aspernatur quis velit.
-                      <i class="fa fa-quote-right col"  style="color: lightgrey;"></i></i>
-                  </div>
+                <div class="row d-flex mt-4" style="font-size: 18px;">
+                  <i class="fa fa-quote-left col"  style="color: lightgrey;">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam tempore animi iusto aspernatur quis velit.
+                    <i class="fa fa-quote-right col"  style="color: lightgrey;"></i></i>
                 </div>
               </div>
             </div>
