--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
       <span class="text-black" style="font-weight: 400;">
         <i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. <br><br>
         <i class="bi bi-check2-all"></i> Duis aute irure dolor in reprehenderit in voluptate velit. <br><br>
-        <i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in <br>&nbsp;&nbsp;&nbsp;&nbsp; reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla <br>&nbsp;&nbsp;&nbsp;&nbsp; pariatur.
+        <i class="bi bi-check2-all"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.
       </span> <br><br>
       Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
     </p>
@@ -742,9 +742,9 @@
       </p>
     </div>
   </div>
-  <div class="row card-group mt-4 mw-100">
-    <div class="col-lg-4 col-12">
-      <div class="card shadow ms-auto" style="width: 420px;" >
+  <div class="row card-group mt-3 mw-100 d-md-flex justify-content-center d-block mx-auto p-lg-5">
+    <div class="col-lg-4 col-12 ms-3 me-3 ms-lg-0 me-lg-0 align-self-center mx-auto">
+      <div class="card shadow mx-auto mt-3"  style="max-width: 720px;" >
         <div class="card-body ms-3">
           <h5 class="card-title mt-4" style="font-weight:bold; font-size: 27px;">01</h5>
           <h3 class="card-subtitle my-3 title" style="font-size: 22px;">Lorem Ipsum</h3>
@@ -752,8 +752,8 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-12">
-      <div class="card shadow mx-auto" style="width: 420px;" >
+    <div class="col-lg-4 col-12 ms-3 me-3 ms-lg-0 me-lg-0">
+      <div class="card shadow mx-auto mt-3"  style="max-width: 720px;" >
         <div class="card-body ms-3">
           <h5 class="card-title mt-4" style="font-weight:bold; font-size: 27px;">02</h5>
           <h3 class="card-subtitle my-3 title" style="font-size: 22px;">Repellat Nihil</h3>
@@ -761,8 +761,8 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-12">
-      <div class="card shadow" style="width: 420px;" >
+    <div class="col-lg-4 col-12 ms-3 me-3 ms-lg-0 me-lg-0">
+      <div class="card shadow mx-auto mt-3"  style="max-width: 720px;" >
         <div class="card-body ms-3">
           <h5 class="card-title mt-4" style="font-weight:bold; font-size: 27px;">03</h5>
           <h3 class="card-subtitle my-3 title" style="font-size: 22px;">Card subtitle</h3>
