--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       border-radius: 25px;
     }
     .nav-link{
-      color: white;
+      color: white ;
     }
     .nav-link:hover{
       color: orange;
@@ -118,7 +118,19 @@
     .nav-link:focus{
       color: orange;
     }
-    .nav-link + .active{
+    .nav-link.active{
+      color: orange;
+    }
+    .nav-link.black-text{
+      color: black;
+    }
+    .nav-link.black-text:hover{
+      color: orange;
+    }
+    .nav-link.black-text:focus{
+      color: orange;
+    }
+    .nav-link.black-text.active{
       color: orange;
     }
     .carousel-control-prev-icon{
@@ -412,6 +424,7 @@
       .navbar-dark-scrolled{
         padding-top: 10px !important;
         transition: all 0.5;
+        opacity: 1 !important;
       }
       .first-slider{
         height: 750px;
@@ -515,6 +528,11 @@
     .carousel-inner.second>.carousel-item{
       height: 800px;
     }
+    .navbar-dark-scrolled{
+        padding-top: 10px !important;
+        transition: all 0.5;
+        opacity: 1 !important;
+      }
     .vid-img{
         /* width: 420px;
         max-width:  635px; */
@@ -556,29 +574,29 @@
             <div class="modal-body" style="height: 610px; background: transparent;">
               <ul class="navbar-nav">
                 <li class="">
-                  <a class="nav-link text-dark active" aria-current="page" href="#carousel">Home</a>
+                  <a class="nav-link black-text" aria-current="page" href="#carouselExampleCaptions">Home</a>
                 </li>
                 <li class="">
-                  <a class="nav-link text-dark" href="#">About</a>
+                  <a class="nav-link black-text" href="#about">About</a>
                 </li>
                 <li class="">
-                  <a class="nav-link text-dark" href="#">Menu</a>
+                  <a class="nav-link black-text" href="#menu">Menu</a>
                 </li>
                 <li class="">
-                  <a class="nav-link text-dark" aria-current="page" href="#">Specials</a>
+                  <a class="nav-link black-text" aria-current="page" href="#specials">Specials</a>
                 </li>
                 <li class="">
-                  <a class="nav-link text-dark" href="#">Events</a>
+                  <a class="nav-link black-text" href="#events">Events</a>
                 </li>
                 <li class="">
-                  <a class="nav-link text-dark" href="#">Chefs</a>
+                  <a class="nav-link black-text" href="#chefs">Chefs</a>
                 </li>
                 <li class="">
-                  <a class="nav-link text-dark" aria-current="page" href="#">Gallery</a>
+                  <a class="nav-link black-text" aria-current="page" href="#gallery">Gallery</a>
                 </li>
-                <li class=" dropdown" id="myDropdown">
-                  <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">  Drop Down  </a>
-                  <ul class="dropdown-menu">
+                <li class=" dropdown black-text" id="myDropdown">
+                  <a class="nav-link dropdown-toggle black-text" href="#carouselExampleCaptions" data-bs-toggle="dropdown">  Drop Down  </a>
+                  <ul class="dropdown-menu black-text">
                     <li> <a class="dropdown-item" href="#"> Dropdown 1 </a></li>
                     <li> <a class="dropdown-item" href="#"> Deep Dropdown &raquo; </a>
                       <ul class="submenu dropdown-menu">
@@ -594,7 +612,7 @@
                   </ul>
                 </li>
                 <li class="">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link black-text" href="#contact">Contact</a>
                 </li>
               </ul>
             </div>
@@ -604,28 +622,28 @@
       <div class="d-flex justify-conent-end">
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="nav-item">
-              <a class="nav-link text-white active" aria-current="page" href="#carousel">Home</a>
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </ul>
             <ul class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#about">About</a>
             </ul>
             <ul class="nav-item">
-              <a class="nav-link" href="#">Menu</a>
+              <a class="nav-link" href="#menu">Menu</a>
             </ul>
             <ul class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Specials</a>
+              <a class="nav-link" aria-current="page" href="#specials">Specials</a>
             </ul>
             <ul class="nav-item">
-              <a class="nav-link" href="#">Events</a>
+              <a class="nav-link" href="#events">Events</a>
             </ul>
             <ul class="nav-item">
-              <a class="nav-link" href="#">Chefs</a>
+              <a class="nav-link" href="#chefs">Chefs</a>
             </ul>
             <ul class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Gallery</a>
+              <a class="nav-link" aria-current="page" href="#gallery">Gallery</a>
             </ul>
             <ul class="nav-item dropdown" id="myDropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">  Drop Down  </a>
+              <a class="nav-link dropdown-toggle" href="#carouselExampleCaptions" data-bs-toggle="dropdown">  Drop Down  </a>
               <ul class="dropdown-menu">
                 <li> <a class="dropdown-item" href="#"> Dropdown 1 </a></li>
                 <li> <a class="dropdown-item" href="#"> Deep Dropdown &raquo; </a>
@@ -642,11 +660,11 @@
               </ul>
             </ul>
             <ul class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </ul>
         </div>
         <div class="nav-item d-inline order-1 ms-3 me-2">
-          <a class="btn-orange py-2 px-3" href="#">Book a table</a>
+          <a class="btn-orange py-2 px-3" href="#bookATable">Book a table</a>
         </div>
       </div>
     </div>
@@ -728,7 +746,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-  <div class="row mw-100 mb-5 pb-5 d-block d-lg-flex">
+  <div class="row mw-100 mb-5 pb-5 d-block d-lg-flex" id="about">
     <div class="container-fluid col-lg-5 col-12 mt-5 ">
       <img src="img/about.jpg" class="responsive vid-img img-fluid ms-0 me-0" alt="">
       <div class="centered"><a href="https://www.youtube.com/"> <i class="bi bi-play-circle-fill" style="font-size: 70px; color:#ffb03b;"></i></a></div>
@@ -793,7 +811,7 @@
       </div>
     </div>
   </div>
-  <div class="row  mw-100">
+  <div class="row  mw-100" id="menu">
     <div class="col-12">
       <p class="text-dark text-center mt-5 pt-5 line" style="font-size: 16px;">
         <span class="title text-dark" style="font-size: 30px;">Check our tasty </span> <span class="title" style="color:orange; font-size: 30px;">Menu</span><br><br>
@@ -1068,7 +1086,7 @@
       </div>
       </div>
   </div>
-  <div class="row mw-100 d-flex justify-content-center ps-3">
+  <div class="row mw-100 d-flex justify-content-center ps-3" id="specials">
     <div class="col-lg-5">
       <p class="text-dark text-center mt-5 line" style="font-size: 16px;">
         <span class="title text-dark" style="font-size: 30px;">Check Our</span> <span class="title" style="color:orange; font-size: 30px;">Specials</span><br><br>
@@ -1136,7 +1154,7 @@
           </div>
     </section>
   </div>
-  <div class="wrap mw-100 mt-4" >
+  <div class="wrap mw-100 mt-4" id="events">
     <div class="fixed-bg-image darkened-image3" style="background-image: url('img/events-bg.jpg');"></div>
     <div class="row mw-100 bg-text">
       <p class="text-center pt-5 title brightness" style="font-size: 35px;">
@@ -1283,7 +1301,7 @@
       </div>
     </div>
   </div>
-  <div class="row mw-100 bg-text d-flex justify-content-center ps-3">
+  <div class="row mw-100 bg-text d-flex justify-content-center ps-3" id="gallery">
     <div class="col-lg-5">
       <p class="text-dark text-center mt-5 line text-muted" style="font-size: 18px;">
         <span class="title text-dark text-muted" style="font-size: 32px;">Some photos from </span> <span class="title" style="color:orange; font-size: 30px;">Our Restaurant</span><br><br>
@@ -1384,7 +1402,7 @@
     </div>
     </main>
   </div>
-  <div class="wrap2 mw-100">
+  <div class="wrap2 mw-100" id="chefs">
     <div class="fixed-bg-image darkened-image2 mw-100" style="background-image: url('img/chefs-bg.jpg'); width: 1520px;"></div>
     <div class="row mw-100 bg-text d-flex justify-content-center p-lg-5 ps-5">
       <div class="col-lg-5">
@@ -1645,7 +1663,7 @@
       </div>
     </div>
   </div>
-  <div class="pb-5 ps-4">
+  <div class="pb-5 ps-4" id="contact">
     <div class="row mw-100 d-flex justify-content-center text-center pt-5">
       <div class="col-lg-5">
         <p class="text-dark text-center mt-5 line text-muted" style="font-size: 18px;">
