--- a/index.html
+++ b/index.html
@@ -1162,7 +1162,7 @@
   <div class="wrap mw-100 mt-4" id="events">
     <div class="fixed-bg-image darkened-image3" style="background-image: url('img/events-bg.jpg');"></div>
     <div class="row mw-100 bg-text">
-      <p class="text-center pt-5 title brightness" style="font-size: 35px;">
+      <p class="text-center pt-md-5 title brightness" style="font-size: 35px;">
         Organize Your<span style="color:orange; font-size: 30px;">Events </span> in our Restaurant
       </p>
       <div id="carouselExample" class="carousel slide second-slider" data-bs-ride="carousel">
@@ -1178,7 +1178,7 @@
                         <div class="col-lg-6 col-md-8 col-12"><img class="mw-100 carousel-image" src="img/event-birthday.jpg"></div>
                         <div class="col-lg-6 col-md-12 d-flex col-12" style="font-size: 18px;">
                             <div class="text-start ps-3">
-                              <div class="row"><span class="orange title ps-0 pt-4 pt-lg-0" style="font-size: 25px;">Birthday Parties</span></div>
+                              <div class="row"><span class="orange title ps-0 pt-md-4 pt-lg-0" style="font-size: 25px;">Birthday Parties</span></div>
                               <div class="row fw-bold text-decoration-underline" >189$</div>
                               <div class="row pt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea minus quod enim. Odit, neque aspernatur.</div>
                               <div class="row pt-3 d-flex">
@@ -1202,7 +1202,7 @@
                         <div class="col-lg-6 col-md-8 col-12"><img class="img-fluid carousel-image" src="img/event-private.jpg"></div>
                         <div class="col-lg-6 col-md-12 d-flex col-12" style="font-size: 18px;">
                           <div class="text-start ps-3">
-                            <div class="row"><span class="orange title ps-0 pt-4 pt-lg-0" style="font-size: 25px;">Private Parties</span></div>
+                            <div class="row"><span class="orange title ps-0 pt-md-4 pt-lg-0" style="font-size: 25px;">Private Parties</span></div>
                             <div class="row fw-bold text-decoration-underline" >250$</div>
                             <div class="row pt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea minus quod enim. Odit, neque aspernatur.</div>
                             <div class="row pt-3 d-flex">
@@ -1226,7 +1226,7 @@
                         <div class="col-lg-6 col-md-8 col-12"><img class="img-fluid carousel-image" src="img/event-custom.jpg"></div>
                         <div class="col-lg-6 col-md-12 d-flex col-12" style="font-size: 18px;">
                           <div class="text-start ps-3">
-                            <div class="row"><span class="orange title ps-0 pt-4 pt-lg-0" style="font-size: 25px;">Custom Parties</span></div>
+                            <div class="row"><span class="orange title ps-0 pt-md-4 pt-lg-0" style="font-size: 25px;">Custom Parties</span></div>
                             <div class="row fw-bold text-decoration-underline" >99$</div>
                             <div class="row pt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea minus quod enim. Odit, neque aspernatur.</div>
                             <div class="row pt-3 d-flex">
